# procedural-planets

./: Cargo.toml
assets/saves/: purple-high.ron  purple-low.ron
assets/shaders/: atmosphere.wgsl  height.wgsl  ocean.wgsl  planet.wgsl  water.wgsl
src/: main.rs
src/render/: atmosphere.rs  light.rs  mod.rs  ocean.rs  planet.rs  planet_mat.rs  post.rs  utils.rs
src/ui/: camera.rs  color.rs  controller.rs  mod.rs  noise.rs  render.rs  save.rs  shape.rs
