[package]
name = "procedural-planets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
bevy_egui = "0.22.0"
bytemuck = "1.14.0"
rand = "0.8.5"
serde = "1.0.189"
ron = "0.8.1"
bevy_panorbit_camera = { version = "0.8.0", features = ["bevy_egui"] }
bevy_rapier3d = { version = "0.22.0", features = ["parallel"] }
bevy_fps_controller = "0.2.3"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1
debug = 1

[profile.dev.package."*"]
opt-level = 3